--- a/assets/styles.css
+++ b/assets/styles.css
@@ -382,3 +382,52 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background: #0056b3;
 }
+
+.content {
+  margin: 20px;
+}
+
+.section-container {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  text-align: left;
+}
+
+.search-bar {
+  margin-bottom: 20px;
+}
+
+#reviewSearch {
+  padding: 8px;
+  margin-right: 10px;
+}
+
+
+button {
+  padding: 8px 12px;
+  cursor: pointer;
+  background-color: #f44336; /* Red background */
+  color: white; /* White text */
+  border: none;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: #d32f2f; /* Darker red on hover */
+}
